--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "travellogbackend",
   "version": "1.0.0",
   "description": "This is the backend of the travel log application",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "start": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
